--- a/node/package.json
+++ b/node/package.json
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/alexbuechele/homepage#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-promise-router": "^3.0.1",
-    "pg": "^7.4.1"
+    "morgan": "^1.9.0",
+    "pg": "^7.4.1",
+    "pug": "^2.0.0-rc.4",
+    "serve-favicon": "^2.4.5"
   }
 }
