--- a/node/package.json
+++ b/node/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-promise-router": "^3.0.1",
+    "express-validator": "^5.0.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "pug": "^2.0.0-rc.4",
