--- a/node/package.json
+++ b/node/package.json
@@ -25,8 +25,10 @@
     "express-promise-router": "^3.0.1",
     "express-validator": "^5.0.0",
     "morgan": "^1.9.0",
+    "npm": "^5.7.1",
     "pg": "^7.4.1",
     "pug": "^2.0.0-rc.4",
+    "request": "^2.85.0",
     "serve-favicon": "^2.4.5"
   }
 }
