--- a/node/package.json
+++ b/node/package.json
@@ -29,6 +29,7 @@
     "pg": "^7.4.1",
     "pug": "^2.0.0-rc.4",
     "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "serve-favicon": "^2.4.5"
   }
 }
