--- a/node/package.json
+++ b/node/package.json
@@ -20,16 +20,16 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
-    "dotenv": "^5.0.0",
-    "express": "^4.16.2",
-    "express-promise-router": "^3.0.1",
-    "express-validator": "^5.0.0",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-promise-router": "^3.0.2",
+    "express-validator": "^5.1.2",
     "morgan": "^1.9.0",
-    "npm": "^5.7.1",
+    "npm": "^5.8.0",
     "pg": "^7.4.1",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.3",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.5.0"
   }
 }
