--- a/node/package.json
+++ b/node/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^5.1.2",
     "morgan": "^1.9.0",
     "npm": "^5.8.0",
+    "oauth": "^0.9.15",
     "pg": "^7.4.1",
     "pug": "^2.0.3",
     "request": "^2.85.0",
